package teleporter.integration.protocol.proto;

message KafkaProto {
    required bytes tId = 1;
    required string topic = 2;
    required bytes key = 3;
    required int32 partition = 4;
    required bytes message = 5;
}

message KafkaProtos {
    repeated KafkaProto protos = 1;
}